--- a/src/app/ship/ship.component.html
+++ b/src/app/ship/ship.component.html
@@ -1,4 +1,12 @@
-<body>
+<!-- /*
+* File: ship.component.html
+* Author: Kovács Dorina
+* Copyright: 2023, Kovács Dorina
+* Group: Szoft II/N
+* Date: 2023-04-07
+* Github: https://github.com/Kdorina/
+* Licenc: GNU GPL
+*/ -->
   <h1>Ships Database</h1>
   <div class="d-grid gap-2 col-6 mx-auto">
     <button type="button" (click)="button()" class="btn btn-light" id="button">Add new ship</button>
@@ -61,4 +69,5 @@
       </table>
     </div>
   </div>
-</body>
+
+  <footer>&copy;Kovács Dorina, Szoft II/N, 2023-04-07</footer>
